# nitro-attestation

./: Cargo.toml
docker/: Dockerfile
guest/: .dockerignore  Cargo.toml  run_nitro.sh
guest/src/: main.rs
guest/src/attest/: mod.rs  vsock_client.rs  vsock_log.rs  vsock_protocol.rs  vsock_util.rs
host/: Cargo.toml
host/src/: main.rs
src/: main.rs
src/attest/: mod.rs
