[workspace]
members = ["host", "guest"]
resolver = "2"

[workspace.dependencies]
aws-nitro-enclaves-nsm-api = "0.4.0"
aws-nitro-enclaves-cose = "0.5.2"
aws-sdk-kms = "1.50.0"
aws-config = "1.5.10"
anyhow = "*"
nix = { version = "0.29.0", features = ["socket"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11.15"
bincode = "1.3"
tokio = { version = "1.42.0", features = ["full"] }
chrono = "0.4.39"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-core = "0.1.33"
log = "0.4.22"